# cadise

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  FEATURE.md  LICENSE.txt  README.md  THIRDPARTY.txt
Cadise/: CMakeLists.txt
cadise/: CMakeLists.txt
cadise-cli/: CMakeLists.txt
cadise-cli/source/: main.cpp
cadise-cli/source/cadise-cli-utils/: commandLineArguments.cpp  commandLineArguments.h  standaloneRenderer.cpp  standaloneRenderer.h
cadise/include/cadise/: cadise.h
cadise/source/api/: cadise.cpp  globalStorage.cpp
cadise/source/core/: engine.cpp  engine.h  intersection.h  ray.cpp  ray.h  renderDatabase.cpp  renderDatabase.h  scene.cpp  scene.h  surfaceDetail.cpp  surfaceDetail.h  surfaceIntersection.cpp
cadise/source/core/camera/: camera.cpp  camera.h  perspectivePinholeCamera.cpp  perspectivePinholeCamera.h
cadise/source/core/estimator/: energyEstimator.cpp  energyEstimator.h  ptEstimator.cpp  ptEstimator.h  radianceEstimator.h  vpmEstimator.cpp  vptEstimator.cpp  vptEstimator.h  wdlEstimator.cpp  wdlEstimator.h
cadise/source/core/estimator/aov/: aoEstimator.cpp  aovEstimator.cpp  aovEstimator.h  uvwEstimator.cpp  uvwEstimator.h  wsnEstimator.cpp  wsnEstimator.h
cadise/source/core/film/: film.cpp  filmTile.cpp  filmTile.h  rgbRadianceSensor.h
cadise/source/core/film/filter/: boxFilter.cpp  boxFilter.h  coneFilter.cpp  coneFilter.h  filter.cpp  filter.h  gaussianFilter.cpp  mitchellFilter.cpp  mitchellFilter.h
cadise/source/core/imaging/: tImage.h  tImage.ipp
cadise/source/core/instantiator/: acceleratorInstantiator.cpp  bsdfInstantiator.cpp  cameraInstantiator.cpp  estimatorInstantiator.cpp  filmInstantiator.cpp  filterInstantiator.cpp  instantiator.h  lightClusterInstantiator.cpp  lightInstantiator.cpp  primitiveInstantiator.cpp  rendererInstantiator.cpp  samplerInstantiator.cpp  textureInstantiator.cpp
cadise/source/core/integral-tool/: connectEvent.h  directLightEvaluator.cpp  directLightEvaluator.h  eMisMode.h  russianRoulette.cpp  russianRoulette.h  tMis.h  tPointKdTree.h  tPointKdTree.ipp  tSurfaceSampler.h
cadise/source/core/integral-tool/sample/: bsdfSample.cpp  cameraSample.cpp  directLightSample.h  emitLightSample.cpp  positionSample.cpp  positionSample.h
cadise/source/core/intersector/: differentialGeometry.cpp  differentialGeometry.h  intersector.cpp  intersector.h  primitiveInfo.cpp
cadise/source/core/intersector/accelerator/: bruteForceAccelerator.cpp  bruteForceAccelerator.h
cadise/source/core/intersector/primitive/: infiniteSphere.cpp  infiniteSphere.h  primitive.cpp  primitive.h  rectangle.cpp  sphere.cpp  sphere.h  triangle.cpp  triangle.h  triangleBuffer.cpp  triangleBuffer.h  triangleMesh.cpp  triangleMesh.h
cadise/source/core/light/: light.cpp
cadise/source/core/light/category/: areaLight.cpp  areaLight.h  environmentLight.cpp  environmentLight.h  pointLight.cpp  singleAreaLight.cpp  singleAreaLight.h
cadise/source/core/light/cluster/: lightCluster.cpp  powerLightCluster.cpp  uniformLightCluster.cpp  uniformLightCluster.h
cadise/source/core/renderer/: renderWork.cpp  renderWork.h  renderer.cpp  renderer.h
cadise/source/core/renderer/bidirectional-path-tracing/: bdptMis.cpp  bdptMis.h  bdptRenderer.cpp  bdptRenderer.h  eVertexType.h  pathVertex.cpp  pathVertex.h  subPath.cpp  subPath.h  subPathBuilder.cpp  subPathBuilder.h  subPathConnector.cpp
cadise/source/core/renderer/photon-mapping/: photon.cpp  photon.h  photonCenterCalculator.h  photonMap.h  pmSetting.cpp  pmSetting.h  pmViewpoint.cpp  pmViewpoint.h  pmViewpointConstructor.cpp  pmViewpointConstructor.h  pmViewpointSampleRay.cpp  pmViewpointSampleRay.h
cadise/source/core/renderer/render-work/: bdptTileWork.cpp  bdptTileWork.h  estimatorTileWork.cpp  estimatorTileWork.h  photonMapWork.cpp  photonMapWork.h  pmRadianceEstimationWork.cpp  pmViewpointWork.cpp  pmViewpointWork.h  tileWork.cpp  tileWork.h
cadise/source/core/sampler/: sampleRecord.cpp  sampleRecord.h  sampleRecord1D.cpp  sampleRecord1D.h  sampleRecord2D.cpp  sampleRecord2D.h
cadise/source/core/spectrum/: rgbSpectrum.cpp  rgbSpectrum.h  spectrum.h  tConceptualSpectrum.h  tConceptualSpectrum.ipp
cadise/source/core/surface/: bsdfComponents.h  bsdfLobes.cpp  eLobe.h  eTransportMode.h  transportInfo.cpp  transportInfo.h
cadise/source/core/texture/: eTextureSampleMode.h  eTextureWrapMode.h  tTexture.h
cadise/source/file-io/: clParser.cpp  clParser.h  path.cpp  path.h  pictureLoader.cpp  pictureLoader.h  pictureSaver.h  string_utils.cpp  string_utils.h  tokenizer.cpp  tokenizer.h
cadise/source/file-io/scene-description/: CSDParser.h  CSDResource.cpp  CSDResourceParser.cpp  CSDResourceParser.h  eSdClassType.h  sdData.cpp  sdData.h  sdDataParser.cpp  sdDataParser.h  sdParser.cpp  sdParser.h  tSdDataUnit.h  tSdDataUnit.ipp  tokenizer.cpp  tokenizer.h  valueParser.h
cadise/source/fundamental/: assertion.cpp  assertion.h  config.h  stackTracer.h
cadise/source/fundamental/logger/: eLogLevel.h  logger.cpp  logger.h
cadise/source/fundamental/time/: stopwatch.h  timePeriod.cpp  timePeriod.h  timestamp.cpp  timestamp.h
cadise/source/math/: constant.h  math.cpp  math.h  quaternion.h  random.cpp  random.h  tAabb2.h  tAabb2.ipp  tAabb3.h  tAabb3.ipp  tArithmeticArray.h  tArithmeticArray.ipp  tLocalCoordinateSystem3.h  tLocalCoordinateSystem3.ipp  tMatrix4.h  tMatrix4.ipp  tVector2.h  tVector2.ipp  tVector3.h  tVector3.ipp  transform.cpp  transform.h
cadise/source/math/distribution/: distribution1D.cpp  distribution1D.h  distribution2D.cpp  distribution2D.h
cadise/source/math/type/: fundamentalType.h  mapType.h
cadise/source/math/warp/: hemisphere.cpp  hemisphere.h  sampleWarp.cpp  sampleWarp.h
cadise/source/utility/: atomic.h  iMovableOnly.h  imageUtils.cpp  imageUtils.h  movableOnly.h  parallel.cpp  tDenseBuffer.h  tDenseBuffer.ipp  tDynamicPointerArray.h  tDynamicPointerArray.ipp
(+1106 files in other folders)
